--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: Home
             {% for property in site.properties %}
             <a href="{{ property.url | relative_url }}" class="property-card">
                 <div class="property-image">
-                    <img src="{{ property.featured_image }}" alt="{{ property.address }}">
+                    <img src="assets/properties/{{ property.slug }}/{{ property.image_featured }}" alt="{{ property.address }}">
                     <span class="property-status">{{ property.status }}</span>
                 </div>
                 <div class="property-info">
