css for res, index polish

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ title: Home
 
 <section class="hero">
     <div class="hero-content">
-        <h1>Exceptional Properties</h1>
-        <p>Curated Real Estate Excellence</p>
+        <h1>Your Exceptional Property</h1>
+        <p>Our Beautiful Custom Real Estate Landing Pages</p>
     </div>
 </section>
 
