css fixes, new index image, stripe

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
 <section class="hero">
     <div class="hero-content">
         <h1>Your Exceptional Property</h1>
-        <p>Our Beautiful Custom Real Estate Landing Pages</p>
+        <p>Deserves a Beautiful Custom Landing Page</p>
     </div>
 </section>
 
