--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@ title: Home
 <section class="properties-section">
     <div class="container">
         <div class="section-header">
-            <h2>Featured Listings</h2>
-            <p>Discover Your Next Home</p>
+            <h2>Landing Page Examples</h2>
         </div>
         
         <div class="properties-grid">
